--- a/metadata.html
+++ b/metadata.html
@@ -54,6 +54,9 @@
               <li class="nav-item">
                 <a class="nav-link" href="visualizations.html"> Visualizations </a>
               </li>
+              <li class="nav-item">
+                <a class="nav-link" href="catalogue.html">Catalogue</a>
+              </li>
 
             </ul>
 
@@ -229,6 +232,9 @@
               </li>
               <li class="nav-item">
                 <a style="color: #ffffff;" class="nav-link" href="visualizations.html"> Visualizations </a>
+              </li>
+              <li class="nav-item">
+                <a style="color: #ffffff;" class="nav-link" href="catalogue.html">Catalogue</a>
               </li>
 
 
